ajustando tipo Date para atributo dateOfRegistration do model Registration